# mcp-examples

./: .env.template  Makefile  README.md  pyproject.toml
.github/workflows/: publish.yml  test-publish.yml  test.yml  trunk_check.yml
.trunk/: trunk.yaml
dev/: setup.sh  test_python.sh
src/mcp_examples/: debug_mcp_client.py  utils.py
src/mcp_examples/agentic_server/: agent.py  server.py
src/mcp_examples/llm_server/: server.py
src/mcp_examples/math_tools/: server.py
src/mcp_examples/sse_server/: server.py
src/mcp_examples/tools/: duckduckgo.py
src/mcp_examples/weather/: server.py
tests/: __init__.py  test_dummy.py
